add-ons/minio/minio-tenant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-stage"
  name: tenant
  namespace: tenant-tiny
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - ptisma.online
    - www.ptisma.online
    secretName: ptisma-online-tls
  rules:
  - host: ptisma.online
    http:
      paths:
        - pathType: Prefix
          path: /myminio
          backend:
            service:
              name: myminio-console
              port:
                number: 9443
  - host: www.ptisma.online
    http:
      paths:
        - pathType: Prefix
          path: /myminio
          backend:
            service:
              name: myminio-console 
              port:
                number: 9443
